[project]
name = "langchain-agents-under-the-hood"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=26.3.1",
    "isort>=8.0.1",
    "langchain>=1.2.12",
    "langchain-ollama>=1.0.1",
    "langchain-openai>=1.1.11",
    "python-dotenv>=1.2.2",
]
